# torchsparse

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cython_setup.py  install.py  install.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  compile_help.yaml  installation.yaml
.github/workflows/: building.yml  formatter.yml  pre-commit.yaml  yapf.yml
alpha/notebooks/: data_processing_pipeline.ipynb  data_visualization_cleaning.ipynb  trainingtesting.ipynb
alpha/python/: confusion_matrix.py  data_proccessing.py  evaluate.py  example.py  plotting.py  train_test.py  training.py  traintestsplit.py
alpha/shell/: data_processing.sh  test.sh  training.sh
data/notebooks/: data_processing_pipeline.ipynb  example_model.ipynb
data/python/: data_proccessing.py  example.py  train_test.py  traintestsplit.py
data/shell/: data_processing.sh  installTorchSparse.sh  test.sh  training.sh
docker/: Dockerfile
docs/: FAQ.md  conf.py  index.rst  installation.md  introduction.md  make.bat  requirements.txt
docs/getting_started/: installation.md  introduction.md
docs/guides/: optimization.md
docs/reference/: citation.md  index.rst  torchsparse.backbones.modules.rst  (+7 more)
examples/: README.md  autotvm_test.py  backbones.py  converter.py  example.py  mm_generate.py  mm_test.py  mm_test_single.py  model.py  performance.py  sparseresnet.py  sparseresunet.py  test.py
tests/: test.py
torchsparse/: __init__.py  backends.py  operators.py  point_tensor.py  sparse_tensor.py  tensor.py  tensors.py  version.py  version.txt
(+235 files in other folders)
